[gd_scene load_steps=2 format=3 uid="uid://blwddeq2cjexb"]

[ext_resource type="Script" path="res://common/speaker_scroll_container_control.gd" id="1_a4thw"]

[node name="SpeakerScrollContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a4thw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.34902, 0.458824, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SpacerTop" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
mouse_filter = 2

[node name="Content" type="HFlowContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 16
alignment = 1

[node name="Nice" type="Button" parent="ScrollContainer/VBoxContainer/Content"]
modulate = Color(1, 0.690196, 0, 1)
layout_mode = 2
text = "Nice"

[node name="Magnificent" type="Button" parent="ScrollContainer/VBoxContainer/Content"]
layout_mode = 2
text = "Magnificent"

[node name="SpacerBottom" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 200.0
theme_type_variation = &"XLargeLabel"
text = "Tobi"
horizontal_alignment = 1
vertical_alignment = 1
